--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,12 @@
 .app-wrapper {
   margin: 0 auto;
   display: grid;
-  width: 1200px;
 
-  grid-template-areas: 
-  "h h"
-  "n c";
+  grid-template-areas:
+    "h h"
+    "n c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
-}
 
-.header {
-  grid-area: h;
-  background-color: #13CE66;
-}
-
-.header img {
-  width: 50px;
-
-}
-
-.content img {
-  width: 100%;
-  height: 300px;
-}
-.content {
-  grid-area: c;
-  background-color: brown;
-}
-
-.nav {
-  grid-area: n;
-  background-color: aqua;
+  grid-gap: 16px;
 }
