--- a/src/components/Dialogs/Messages/Messages.module.css
+++ b/src/components/Dialogs/Messages/Messages.module.css
@@ -1,29 +1,36 @@
-.container .head {
-    font-size: 27px;
-    padding: 0;
+.messages {
     font-family: 'Lato', sans-serif;
     color: #47525E;
+    font-size: 20px;
+    padding-left: 5px;
+}
+
+.message {
     margin-bottom: 20px;
 }
 
-.container textarea {
+.message:last-child {
+    margin-bottom: 100px;
+}
+
+.text textarea {
     resize: none;
     border: 0;
     background-color: #E6EEEA;
-    width: 1000px;
-    height: 80px;
+    width: 300px;
+    height: 50px;
     margin-bottom: 20px;
     font-family: 'Lato', sans-serif;
-    font-size: 23px;
+    font-size: 18px;
     color:#47525E;
     grid-area: t;
 }
 
-.container button {
+.text button {
     margin: 0;
     border: 0;
     background-color: #0CB658;
-    width: 162px;
+    width: 80px;
     height: 36px;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
@@ -31,20 +38,12 @@
     grid-area: b;
 }
 
-.container .text {
-    width: 1000px;
+.text {
+    width: 300px;
     display: grid;
     grid-template-areas:
     "t t"
     ". b";
 
     margin-bottom: 50px;
-}
-
-.button:hover {
-    opacity: 0.8;
-}
-
-.button:active {
-    opacity: 0.5;
 }
