--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,11 +1,18 @@
 .item {
-    color: brown;
-    margin-bottom: 20px;
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 40px;
+
 }
 
 .item img {
-    height: 20px;
-    width: 20px;
-    margin: 0;
+    height: 30px;
+    width: 30px;
     margin-right: 5px;
+}
+
+.description {
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    color: #47525E;
 }
